--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 Column Preview Card Component</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     
 <main class="container">
+    <h1 aria-label="My text for screen readers"></h1>
     <div class="card orange">
-        <img src="icon-sedans.svg" alt="icon-sedans">
+        <img src="/images/icon-sedans.svg" alt="" aria-hidden="true">
         <h2>  Sedans</h2>
         <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
             or on your next road trip.</p>
@@ -21,7 +22,7 @@
     </div>
     
     <div class="card cyan">
-        <img src="icon-suvs.svg" alt="icon-suvs">
+        <img src="/images/icon-suvs.svg" alt="" aria-hidden="true">
         <h2>  SUVs</h2>
         <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
             and off-road adventures.</p>
@@ -31,7 +32,7 @@
     </div>
 
     <div class="card green">
-        <img src="icon-luxury.svg" alt="icon-luxury">
+        <img src="/images/icon-luxury.svg" alt="" aria-hidden="true">
         <h2>  Luxury</h2>
         <p>
             Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
